--- a/Angular_Task1/app/app.component.html
+++ b/Angular_Task1/app/app.component.html
@@ -1,1 +1,16 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Fashion Academy</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item"><a class="nav-link" routerLink="/">Home</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/about">About</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/courses">Courses</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="/enroll">Enroll</a></li>
+    </ul>
+  </div>
+</nav>
+<router-outlet></router-outlet>
 
